--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ h1 {
     background-color: #555;
     color: white;
     padding: 10px 20px;
-    margin-right: 10px;
+    margin-right: 15px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -205,10 +205,17 @@ h1 {
     text-align: center;
     }
 
+    .content-wrapper {
+        display: flex;
+        align-items: center;  
+        justify-content: space-between;  
+    }
+
 .about h2 {
     font-size: 36px;
     margin-bottom: 20px;
-    text-align: left;
+    text-align: center;
+    color: white;
 }
 
 .about-content {
@@ -218,25 +225,27 @@ h1 {
 }
 
 .gallery {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: center;
+    flex: 1;  
+    display: flex;  
+    gap: 10px; 
 }
 
 .gallery img {
-    width: 300px;
-    height: 150px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 10px;
 }
 
 .description {
-    max-width: 400px;
-    font-size: 16px;
-    line-height: 1.6;
-    align-self: center;
+    flex: 1;
+    margin-right: 20px;
 }
+
+h2, p.description {
+    color: #ffffff;
+}
+
 
 .about .gallery {
     display: flex;
@@ -252,6 +261,8 @@ h1 {
     margin-left: 20px;
     font-size: 16px;
     line-height: 1.6;
+    color: white;
+    text-align: left;
 }
 
 /* Seção "Atores" */
